--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
 		"dbaeumer.vscode-eslint",
 		"eamodio.gitlens",
 		"esbenp.prettier-vscode",
-		"github.copilot"
+		"github.copilot",
+		"SonarSource.sonarlint-vscode"
 	]
 }
