--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
 	"editor.codeActionsOnSave": {
 		"source.organizeImports": "explicit"
 	},
-	"prettier.useTabs": true
+	"prettier.useTabs": true,
+	"explorer.compactFolders": false
 }
